--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Boilermaker</title>
     <link rel="stylesheet" href="/style.css" />
+    <script src="https://d3js.org/d3.v4.js"></script>
+    <!-- <script src="js/d3.js"></script> -->
     <script defer src="/bundle.js"></script>
+    
   </head>
   <body>
-    <script src="https://d3js.org/d3.v4.js"></script>
     <div id="app"></div>
   </body>
 </html>
